objects/Illumina__c.object
<CustomObject>
    <fields>
        <fullName>Case_RSInc1__c</fullName>
        <label>Case_RSInc1</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Illumina</relationshipLabel>
        <relationshipName>Illuminas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IlmnTextField_RSInc23__c</fullName>
        <label>IlmnTextField_RSInc23</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IlmnTextField_RSInc24__c</fullName>
        <label>IlmnTextField_RSInc24</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistDemo__c</fullName>
        <label>PicklistDemo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
                <value>
                    <fullName>Value4</fullName>
                </value>
                <value>
                    <fullName>Value5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Illumina</label>
    <nameField>
        <label>Illumina Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Illuminas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IlmnValidationRule2_RSInc2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( IlmnTextField_RSInc23__c)</errorConditionFormula>
        <errorMessage>Cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IlmnValidationRule_RSInc2</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( IlmnTextField_RSInc23__c)</errorConditionFormula>
        <errorMessage>Cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IlmnValidationRule_RSInc24</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( IlmnTextField_RSInc24__c)</errorConditionFormula>
        <errorMessage>Cannot be blank</errorMessage>
    </validationRules>
</CustomObject>